2018-05-17  Olga Makhotina  <olga.makhotina@intel.com>
	
	* gcc.target/i386/builtin_target.c: Test goldmont-plus.
	* gcc.target/i386/funcspec-56.inc: Tests for arch=goldmont-plus.

2018-05-17  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/85757
	* gcc.dg/tree-ssa/ssa-dse-34.c: New testcase.

2018-05-16  Marek Polacek  <polacek@redhat.com>

	PR c++/85363
	* g++.dg/cpp0x/initlist-throw1.C: New test.
	* g++.dg/cpp0x/initlist-throw2.C: New test.

2018-05-16 Carl Love  <cel@us.ibm.com>

	* gcc.target/powerpc/vsx-vector-6-be.c: Remove file.
	* gcc.target/powerpc/vsx-vector-6-be.p7.c: New test file.
	* gcc.target/powerpc/vsx-vector-6-be.p8.c: New test file.
	* gcc.target/powerpc/vsx-vector-6-le.c (dg-final): Update counts for
	xvcmpeqdp., xvcmpgtdp., xvcmpgedp., xxlxor, xvrdpi.

2018-05-16  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/ssa-dse-32.c: New testcase.
	* gcc.dg/tree-ssa/ssa-dse-33.c: Likewise.
	* gcc.dg/uninit-pr81897-2.c: Use -fno-tree-dse.

2018-05-16  Richard Sandiford  <richard.sandiford@linaro.org>

	* gcc.target/aarch64/sve/vcond_10.c: New test.
	* gcc.target/aarch64/sve/vcond_10_run.c: Likewise.
	* gcc.target/aarch64/sve/vcond_11.c: Likewise.
	* gcc.target/aarch64/sve/vcond_11_run.c: Likewise.

2018-05-15  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/85753
	* gcc.dg/Wrestrict-10.c: Adjust.
	* gcc.dg/Wrestrict-16.c: New test.

2018-05-15  Martin Sebor  <msebor@redhat.com>

	PR middle-end/85643
	* c-c++-common/attr-nonstring-7.c: New test.

2018-05-15  Richard Biener  <rguenther@suse.de>

	* gcc.dg/tree-ssa/ssa-dse-31.c: New testcase.

2018-05-15  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	PR tree-optimization/83648
	* gcc.dg/tree-ssa/pr83648.c: New test.
	* gcc.dg/tree-ssa/pr83648-2.c: Likewise.

2018-05-14  Prathamesh Kulkarni  <prathamesh.kulkarni@linaro.org>

	PR ipa/85734
	* gcc.dg/ipa/pr85734.c: New test.

2018-05-14  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/85756