@@ -1,5 +1,10 @@
+2018-05-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/85713
+	* g++.dg/cpp1y/lambda-generic-85713-2.C: New.
+
 2018-05-17  Olga Makhotina  <olga.makhotina@intel.com>
-	
+
 	* gcc.target/i386/builtin_target.c: Test goldmont-plus.
 	* gcc.target/i386/funcspec-56.inc: Tests for arch=goldmont-plus.
 
